# ml_proj

./: analysis.txt  data.py  data_analysis.ipynb  data_analysis.py  evaluation.py  kernel_models.py  linear_models.py  logistic_regression.py  main.py  metrics.py  model.py  model_performance.ipynb  models.py  models_old.py  notes.md  preprocessing.py  pyproject.toml  report.odt  tests.py
kernel_linear_lr/: fold_0.txt  fold_1.txt  fold_2.txt  fold_3.txt  fold_4.txt  hyperparameters.txt  overall.txt
kernel_linear_svm/: fold_0.txt  fold_1.txt  fold_2.txt  fold_3.txt  fold_4.txt  hyperparameters.txt  overall.txt
kernel_poly_lr/: overall.txt
kernel_poly_svm/: fold_0.txt  fold_1.txt  fold_2.txt  fold_3.txt  fold_4.txt  hyperparameters.txt  overall.txt
kernel_rbf_lr/: fold_0.txt  fold_1.txt  fold_2.txt  fold_3.txt  fold_4.txt  hyperparameters.txt  overall.txt
kernel_rbf_svm/: fold_0.txt  fold_1.txt  fold_2.txt  fold_3.txt  fold_4.txt  hyperparameters.txt  overall.txt
linear_lr/: fold_0.txt  fold_1.txt  fold_2.txt  fold_3.txt  fold_4.txt  hyperparameters.txt  overall.txt
linear_svm/: fold_0.txt  fold_1.txt  fold_2.txt  fold_3.txt  fold_4.txt  hyperparameters.txt  overall.txt
tests/: test_kernels.py  test_metrics.py  test_model.py  test_models.py  test_preprocessing.py
