[project]
name = "Wine-Quality-Prediction"
version = "0.1.0"
description = "Project for the Statistical Methods for Machine Learning course at Università degli Studi di Milano"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
